pandoc error 83 is gone

--- a/report_templates/diffmeth.report.Rmd
+++ b/report_templates/diffmeth.report.Rmd
@@ -54,13 +54,11 @@ mincov    <- as.numeric(params$mincov)
 context   <- params$context
 workdir   <- params$workdir
 cores     <- as.numeric(params$cores)
-#covariates <- params$covariates
-#covariates <- data.frame(lapply(params$covariates,as.numeric)) # it converts empty strings to NA
-covariates <- if(params$covariates==""){NULL}else{data.frame(lapply(params$covariates,as.numeric))}
+covariates <- if(params$covariates==""){NULL}else{data.frame(lapply(params$covariates,as.numeric))} # it converts empty strings to NA in a data.frame
 
 # change data.frame of strings to numeric
 #data.frame(lapply(params$covariates,as.numeric))
-saveRDS(covariates, paste0("~/covariates.RDS")) #TODO check what is it when there are no covariates
+saveRDS(covariates, paste0("~/covariates.RDS"))
 
 ```
 
@@ -110,6 +108,12 @@ inputParams <- data.frame(Sample.id=sampleids,
                           Mincov=mincov,
                           Assembly=assembly,
                           stringsAsFactors = FALSE)
+# check if covariates+intercept+treatment more than replicates 
+if(!is.null(covariates)){if(ncol(covariates)+2 >= length(sampleids)){
+          print("Too many covariates/too few replicates. Running differential methylation without covariates.")}
+          covariates = NULL
+}
+
 if(!is.null(covariates)){
   inputParams = cbind(inputParams, covariates)
 }
@@ -159,12 +163,6 @@ difference = 25
 qvalue = 0.01
 
 if(nrow(meth.unite)>1){
-
-      # check if covariates+intercept+treatment more than replicates 
-      if(!is.null(covariates)){if(ncol(covariates)+2 >= length(meth.unite@numTs.index)){
-          print("Too many covariates/too few replicates. Running differential methylation without covariates.")}
-          covariates = NULL
-        }
 
       meth.diffmeth <- calculateDiffMeth(meth.unite, 
                                    overdispersion="MN",
